Fix Jumbo builds with UNINITIALIZED values

Error:

../../content/browser/service_worker/service_worker_database.h:398:5: error: declaration shadows a variable in namespace 'content::(anonymous)' [-Werror,-Wshadow]
    UNINITIALIZED,
    ^
../../content/browser/service_worker/service_worker_storage.h:566:5: error: declaration shadows a variable in namespace 'content::(anonymous)' [-Werror,-Wshadow]
    UNINITIALIZED,
    ^

./../../content/browser/browser_thread_impl.cc:36:3: note: previous declaration is here
  UNINITIALIZED = 0,
  ^

Example compilation settings:

target_os="android"
target_cpu="arm"
enable_nacl=false
symbol_level=0
remove_webcore_debug_symbols=true
is_debug=false
dcheck_always_on=false
is_component_build=false
use_jumbo_build=true

BUG=903460

Change-Id: Ie8c6ef88ac299e02724bcbbeb1db69e67515f62b
Reviewed-on: https://chromium-review.googlesource.com/c/1327213
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Marcin Wiącek <marcin@mwiacek.com>
Cr-Commit-Position: refs/heads/master@{#606763}
Former-commit-id: d630de0987d6548a684ad742dad51ff8fb06fa55