content/browser/service_worker/service_worker_storage.cc
@@ -147,13 +147,13 @@ void ServiceWorkerStorage::FindRegistrationForDocument(
     FindRegistrationCallback callback) {
   DCHECK(!document_url.has_ref());
   switch (state_) {
-    case DISABLED:
+    case STORAGE_STATE_DISABLED:
       CompleteFindNow(scoped_refptr<ServiceWorkerRegistration>(),
                       blink::ServiceWorkerStatusCode::kErrorAbort,
                       std::move(callback));
       return;
-    case INITIALIZING:  // Fall-through.
-    case UNINITIALIZED:
+    case STORAGE_STATE_INITIALIZING:  // Fall-through.
+    case STORAGE_STATE_UNINITIALIZED:
       LazyInitialize(base::BindOnce(
           &ServiceWorkerStorage::FindRegistrationForDocument,
           weak_factory_.GetWeakPtr(), document_url, std::move(callback)));
@@ -162,7 +162,7 @@ void ServiceWorkerStorage::FindRegistrationForDocument(
           "ServiceWorkerStorage::FindRegistrationForDocument:LazyInitialize",
           TRACE_EVENT_SCOPE_THREAD, "URL", document_url.spec());
       return;
-    case INITIALIZED:
+    case STORAGE_STATE_INITIALIZED:
       break;
   }
 
@@ -205,18 +205,18 @@ void ServiceWorkerStorage::FindRegistrationForScope(
     const GURL& scope,
     FindRegistrationCallback callback) {
   switch (state_) {
-    case DISABLED:
+    case STORAGE_STATE_DISABLED:
       CompleteFindSoon(FROM_HERE, scoped_refptr<ServiceWorkerRegistration>(),
                        blink::ServiceWorkerStatusCode::kErrorAbort,
                        std::move(callback));
       return;
-    case INITIALIZING:  // Fall-through.
-    case UNINITIALIZED:
+    case STORAGE_STATE_INITIALIZING:  // Fall-through.
+    case STORAGE_STATE_UNINITIALIZED:
       LazyInitialize(base::BindOnce(
           &ServiceWorkerStorage::FindRegistrationForScope,
           weak_factory_.GetWeakPtr(), scope, std::move(callback)));
       return;
-    case INITIALIZED:
+    case STORAGE_STATE_INITIALIZED:
       break;
   }
 
@@ -246,7 +246,7 @@ void ServiceWorkerStorage::FindRegistrationForScope(
 
 ServiceWorkerRegistration* ServiceWorkerStorage::GetUninstallingRegistration(
     const GURL& scope) {
-  if (state_ != INITIALIZED)
+  if (state_ != STORAGE_STATE_INITIALIZED)
     return nullptr;
   for (const auto& registration : uninstalling_registrations_) {
     if (registration.second->scope() == scope) {
@@ -262,19 +262,19 @@ void ServiceWorkerStorage::FindRegistrationForId(
     const GURL& origin,
     FindRegistrationCallback callback) {
   switch (state_) {
-    case DISABLED:
+    case STORAGE_STATE_DISABLED:
       CompleteFindNow(scoped_refptr<ServiceWorkerRegistration>(),
                       blink::ServiceWorkerStatusCode::kErrorAbort,
                       std::move(callback));
       return;
-    case INITIALIZING:  // Fall-through.
-    case UNINITIALIZED:
+    case STORAGE_STATE_INITIALIZING:  // Fall-through.
+    case STORAGE_STATE_UNINITIALIZED:
       LazyInitialize(
           base::BindOnce(&ServiceWorkerStorage::FindRegistrationForId,
                          weak_factory_.GetWeakPtr(), registration_id, origin,
                          std::move(callback)));
       return;
-    case INITIALIZED:
+    case STORAGE_STATE_INITIALIZED:
       break;
   }
 
@@ -312,17 +312,17 @@ void ServiceWorkerStorage::FindRegistrationForIdOnly(
     int64_t registration_id,
     FindRegistrationCallback callback) {
   switch (state_) {
-    case DISABLED:
+    case STORAGE_STATE_DISABLED:
       CompleteFindNow(nullptr, blink::ServiceWorkerStatusCode::kErrorAbort,
                       std::move(callback));
       return;
-    case INITIALIZING:  // Fall-through.
-    case UNINITIALIZED:
+    case STORAGE_STATE_INITIALIZING:  // Fall-through.
+    case STORAGE_STATE_UNINITIALIZED:
       LazyInitialize(base::BindOnce(
           &ServiceWorkerStorage::FindRegistrationForIdOnly,
           weak_factory_.GetWeakPtr(), registration_id, std::move(callback)));
       return;
-    case INITIALIZED:
+    case STORAGE_STATE_INITIALIZED:
       break;
   }
 
@@ -351,20 +351,20 @@ void ServiceWorkerStorage::GetRegistrationsForOrigin(
     const GURL& origin,
     GetRegistrationsCallback callback) {
   switch (state_) {
-    case DISABLED:
+    case STORAGE_STATE_DISABLED:
       RunSoon(
           FROM_HERE,
           base::BindOnce(
               std::move(callback), blink::ServiceWorkerStatusCode::kErrorAbort,
               std::vector<scoped_refptr<ServiceWorkerRegistration>>()));
       return;
-    case INITIALIZING:  // Fall-through.
-    case UNINITIALIZED:
+    case STORAGE_STATE_INITIALIZING:  // Fall-through.
+    case STORAGE_STATE_UNINITIALIZED:
       LazyInitialize(base::BindOnce(
           &ServiceWorkerStorage::GetRegistrationsForOrigin,
           weak_factory_.GetWeakPtr(), origin, std::move(callback)));
       return;
-    case INITIALIZED:
+    case STORAGE_STATE_INITIALIZED:
       break;
   }
 
@@ -384,19 +384,19 @@ void ServiceWorkerStorage::GetRegistrationsForOrigin(
 void ServiceWorkerStorage::GetAllRegistrationsInfos(
     GetRegistrationsInfosCallback callback) {
   switch (state_) {
-    case DISABLED:
+    case STORAGE_STATE_DISABLED:
       RunSoon(FROM_HERE,
               base::BindOnce(std::move(callback),
                              blink::ServiceWorkerStatusCode::kErrorAbort,
                              std::vector<ServiceWorkerRegistrationInfo>()));
       return;
-    case INITIALIZING:  // Fall-through.
-    case UNINITIALIZED:
+    case STORAGE_STATE_INITIALIZING:  // Fall-through.
+    case STORAGE_STATE_UNINITIALIZED:
       LazyInitialize(
           base::BindOnce(&ServiceWorkerStorage::GetAllRegistrationsInfos,
                          weak_factory_.GetWeakPtr(), std::move(callback)));
       return;
-    case INITIALIZED:
+    case STORAGE_STATE_INITIALIZED:
       break;
   }
 
@@ -417,7 +417,9 @@ void ServiceWorkerStorage::StoreRegistration(
   DCHECK(registration);
   DCHECK(version);
 
-  DCHECK(state_ == INITIALIZED || state_ == DISABLED) << state_;
+  DCHECK(state_ == STORAGE_STATE_INITIALIZED ||
+         state_ == STORAGE_STATE_DISABLED)
+      << state_;
   if (IsDisabled()) {
     RunSoon(FROM_HERE,
             base::BindOnce(std::move(callback),
@@ -480,7 +482,9 @@ void ServiceWorkerStorage::UpdateToActiveState(
     StatusCallback callback) {
   DCHECK(registration);
 
-  DCHECK(state_ == INITIALIZED || state_ == DISABLED) << state_;
+  DCHECK(state_ == STORAGE_STATE_INITIALIZED ||
+         state_ == STORAGE_STATE_DISABLED)
+      << state_;
   if (IsDisabled()) {
     RunSoon(FROM_HERE,
             base::BindOnce(std::move(callback),
@@ -500,7 +504,9 @@ void ServiceWorkerStorage::UpdateToActiveState(
 void ServiceWorkerStorage::UpdateLastUpdateCheckTime(
     ServiceWorkerRegistration* registration) {
   DCHECK(registration);
-  DCHECK(state_ == INITIALIZED || state_ == DISABLED) << state_;
+  DCHECK(state_ == STORAGE_STATE_INITIALIZED ||
+         state_ == STORAGE_STATE_DISABLED)
+      << state_;
   if (IsDisabled())
     return;
 
@@ -518,7 +524,9 @@ void ServiceWorkerStorage::UpdateNavigationPreloadEnabled(
     const GURL& origin,
     bool enable,
     StatusCallback callback) {
-  DCHECK(state_ == INITIALIZED || state_ == DISABLED) << state_;
+  DCHECK(state_ == STORAGE_STATE_INITIALIZED ||
+         state_ == STORAGE_STATE_DISABLED)
+      << state_;
   if (IsDisabled()) {
     std::move(callback).Run(blink::ServiceWorkerStatusCode::kErrorAbort);
     return;
@@ -537,7 +545,9 @@ void ServiceWorkerStorage::UpdateNavigationPreloadHeader(
     const GURL& origin,
     const std::string& value,
     StatusCallback callback) {
-  DCHECK(state_ == INITIALIZED || state_ == DISABLED) << state_;
+  DCHECK(state_ == STORAGE_STATE_INITIALIZED ||
+         state_ == STORAGE_STATE_DISABLED)
+      << state_;
   if (IsDisabled()) {
     std::move(callback).Run(blink::ServiceWorkerStatusCode::kErrorAbort);
     return;
@@ -554,7 +564,9 @@ void ServiceWorkerStorage::UpdateNavigationPreloadHeader(
 void ServiceWorkerStorage::DeleteRegistration(int64_t registration_id,
                                               const GURL& origin,
                                               StatusCallback callback) {
-  DCHECK(state_ == INITIALIZED || state_ == DISABLED) << state_;
+  DCHECK(state_ == STORAGE_STATE_INITIALIZED ||
+         state_ == STORAGE_STATE_DISABLED)
+      << state_;
   if (IsDisabled()) {
     RunSoon(FROM_HERE,
             base::BindOnce(std::move(callback),
@@ -604,7 +616,9 @@ ServiceWorkerStorage::CreateResponseMetadataWriter(int64_t resource_id) {
 
 void ServiceWorkerStorage::StoreUncommittedResourceId(int64_t resource_id) {
   DCHECK_NE(kInvalidServiceWorkerResourceId, resource_id);
-  DCHECK(INITIALIZED == state_ || DISABLED == state_) << state_;
+  DCHECK(STORAGE_STATE_INITIALIZED == state_ ||
+         STORAGE_STATE_DISABLED == state_)
+      << state_;
   if (IsDisabled())
     return;
 
@@ -622,7 +636,9 @@ void ServiceWorkerStorage::StoreUncommittedResourceId(int64_t resource_id) {
 
 void ServiceWorkerStorage::DoomUncommittedResource(int64_t resource_id) {
   DCHECK_NE(kInvalidServiceWorkerResourceId, resource_id);
-  DCHECK(INITIALIZED == state_ || DISABLED == state_) << state_;
+  DCHECK(STORAGE_STATE_INITIALIZED == state_ ||
+         STORAGE_STATE_DISABLED == state_)
+      << state_;
   if (IsDisabled())
     return;
   DoomUncommittedResources(std::set<int64_t>(&resource_id, &resource_id + 1));
@@ -630,7 +646,9 @@ void ServiceWorkerStorage::DoomUncommittedResource(int64_t resource_id) {
 
 void ServiceWorkerStorage::DoomUncommittedResources(
     const std::set<int64_t>& resource_ids) {
-  DCHECK(INITIALIZED == state_ || DISABLED == state_) << state_;
+  DCHECK(STORAGE_STATE_INITIALIZED == state_ ||
+         STORAGE_STATE_DISABLED == state_)
+      << state_;
   if (IsDisabled())
     return;
 
@@ -648,18 +666,18 @@ void ServiceWorkerStorage::StoreUserData(
     const std::vector<std::pair<std::string, std::string>>& key_value_pairs,
     StatusCallback callback) {
   switch (state_) {
-    case DISABLED:
+    case STORAGE_STATE_DISABLED:
       RunSoon(FROM_HERE,
               base::BindOnce(std::move(callback),
                              blink::ServiceWorkerStatusCode::kErrorAbort));
       return;
-    case INITIALIZING:  // Fall-through.
-    case UNINITIALIZED:
+    case STORAGE_STATE_INITIALIZING:  // Fall-through.
+    case STORAGE_STATE_UNINITIALIZED:
       LazyInitialize(base::BindOnce(
           &ServiceWorkerStorage::StoreUserData, weak_factory_.GetWeakPtr(),
           registration_id, origin, key_value_pairs, std::move(callback)));
       return;
-    case INITIALIZED:
+    case STORAGE_STATE_INITIALIZED:
       break;
   }
 
@@ -692,18 +710,18 @@ void ServiceWorkerStorage::GetUserData(int64_t registration_id,
                                        const std::vector<std::string>& keys,
                                        GetUserDataCallback callback) {
   switch (state_) {
-    case DISABLED:
+    case STORAGE_STATE_DISABLED:
       RunSoon(FROM_HERE,
               base::BindOnce(std::move(callback), std::vector<std::string>(),
                              blink::ServiceWorkerStatusCode::kErrorAbort));
       return;
-    case INITIALIZING:  // Fall-through.
-    case UNINITIALIZED:
+    case STORAGE_STATE_INITIALIZING:  // Fall-through.
+    case STORAGE_STATE_UNINITIALIZED:
       LazyInitialize(base::BindOnce(&ServiceWorkerStorage::GetUserData,
                                     weak_factory_.GetWeakPtr(), registration_id,
                                     keys, std::move(callback)));
       return;
-    case INITIALIZED:
+    case STORAGE_STATE_INITIALIZED:
       break;
   }
 
@@ -737,19 +755,19 @@ void ServiceWorkerStorage::GetUserDataByKeyPrefix(
     const std::string& key_prefix,
     GetUserDataCallback callback) {
   switch (state_) {
-    case DISABLED:
+    case STORAGE_STATE_DISABLED:
       RunSoon(FROM_HERE,
               base::BindOnce(std::move(callback), std::vector<std::string>(),
                              blink::ServiceWorkerStatusCode::kErrorAbort));
       return;
-    case INITIALIZING:  // Fall-through.
-    case UNINITIALIZED:
+    case STORAGE_STATE_INITIALIZING:  // Fall-through.
+    case STORAGE_STATE_UNINITIALIZED:
       LazyInitialize(
           base::BindOnce(&ServiceWorkerStorage::GetUserDataByKeyPrefix,
                          weak_factory_.GetWeakPtr(), registration_id,
                          key_prefix, std::move(callback)));
       return;
-    case INITIALIZED:
+    case STORAGE_STATE_INITIALIZED:
       break;
   }
 
@@ -780,20 +798,20 @@ void ServiceWorkerStorage::GetUserKeysAndDataByKeyPrefix(
     const std::string& key_prefix,
     GetUserKeysAndDataCallback callback) {
   switch (state_) {
-    case DISABLED:
+    case STORAGE_STATE_DISABLED:
       RunSoon(FROM_HERE,
               base::BindOnce(std::move(callback),
                              base::flat_map<std::string, std::string>(),
                              blink::ServiceWorkerStatusCode::kErrorAbort));
       return;
-    case INITIALIZING:  // Fall-through.
-    case UNINITIALIZED:
+    case STORAGE_STATE_INITIALIZING:  // Fall-through.
+    case STORAGE_STATE_UNINITIALIZED:
       LazyInitialize(
           base::BindOnce(&ServiceWorkerStorage::GetUserKeysAndDataByKeyPrefix,
                          weak_factory_.GetWeakPtr(), registration_id,
                          key_prefix, std::move(callback)));
       return;
-    case INITIALIZED:
+    case STORAGE_STATE_INITIALIZED:
       break;
   }
 
@@ -820,18 +838,18 @@ void ServiceWorkerStorage::ClearUserData(int64_t registration_id,
                                          const std::vector<std::string>& keys,
                                          StatusCallback callback) {
   switch (state_) {
-    case DISABLED:
+    case STORAGE_STATE_DISABLED:
       RunSoon(FROM_HERE,
               base::BindOnce(std::move(callback),
                              blink::ServiceWorkerStatusCode::kErrorAbort));
       return;
-    case INITIALIZING:  // Fall-through.
-    case UNINITIALIZED:
+    case STORAGE_STATE_INITIALIZING:  // Fall-through.
+    case STORAGE_STATE_UNINITIALIZED:
       LazyInitialize(base::BindOnce(&ServiceWorkerStorage::ClearUserData,
                                     weak_factory_.GetWeakPtr(), registration_id,
                                     keys, std::move(callback)));
       return;
-    case INITIALIZED:
+    case STORAGE_STATE_INITIALIZED:
       break;
   }
 
@@ -864,19 +882,19 @@ void ServiceWorkerStorage::ClearUserDataByKeyPrefixes(
     const std::vector<std::string>& key_prefixes,
     StatusCallback callback) {
   switch (state_) {
-    case DISABLED:
+    case STORAGE_STATE_DISABLED:
       RunSoon(FROM_HERE,
               base::BindOnce(std::move(callback),
                              blink::ServiceWorkerStatusCode::kErrorAbort));
       return;
-    case INITIALIZING:  // Fall-through.
-    case UNINITIALIZED:
+    case STORAGE_STATE_INITIALIZING:  // Fall-through.
+    case STORAGE_STATE_UNINITIALIZED:
       LazyInitialize(
           base::BindOnce(&ServiceWorkerStorage::ClearUserDataByKeyPrefixes,
                          weak_factory_.GetWeakPtr(), registration_id,
                          key_prefixes, std::move(callback)));
       return;
-    case INITIALIZED:
+    case STORAGE_STATE_INITIALIZED:
       break;
   }
 
@@ -909,19 +927,19 @@ void ServiceWorkerStorage::GetUserDataForAllRegistrations(
     const std::string& key,
     GetUserDataForAllRegistrationsCallback callback) {
   switch (state_) {
-    case DISABLED:
+    case STORAGE_STATE_DISABLED:
       RunSoon(FROM_HERE,
               base::BindOnce(std::move(callback),
                              std::vector<std::pair<int64_t, std::string>>(),
                              blink::ServiceWorkerStatusCode::kErrorAbort));
       return;
-    case INITIALIZING:  // Fall-through.
-    case UNINITIALIZED:
+    case STORAGE_STATE_INITIALIZING:  // Fall-through.
+    case STORAGE_STATE_UNINITIALIZED:
       LazyInitialize(
           base::BindOnce(&ServiceWorkerStorage::GetUserDataForAllRegistrations,
                          weak_factory_.GetWeakPtr(), key, std::move(callback)));
       return;
-    case INITIALIZED:
+    case STORAGE_STATE_INITIALIZED:
       break;
   }
 
@@ -947,19 +965,19 @@ void ServiceWorkerStorage::GetUserDataForAllRegistrationsByKeyPrefix(
     const std::string& key_prefix,
     GetUserDataForAllRegistrationsCallback callback) {
   switch (state_) {
-    case DISABLED:
+    case STORAGE_STATE_DISABLED:
       RunSoon(FROM_HERE,
               base::BindOnce(std::move(callback),
                              std::vector<std::pair<int64_t, std::string>>(),
                              blink::ServiceWorkerStatusCode::kErrorAbort));
       return;
-    case INITIALIZING:  // Fall-through.
-    case UNINITIALIZED:
+    case STORAGE_STATE_INITIALIZING:  // Fall-through.
+    case STORAGE_STATE_UNINITIALIZED:
       LazyInitialize(base::BindOnce(
           &ServiceWorkerStorage::GetUserDataForAllRegistrationsByKeyPrefix,
           weak_factory_.GetWeakPtr(), key_prefix, std::move(callback)));
       return;
-    case INITIALIZED:
+    case STORAGE_STATE_INITIALIZED:
       break;
   }
 
@@ -1007,23 +1025,23 @@ void ServiceWorkerStorage::DiskCacheImplDoneWithDisk() {
 }
 
 int64_t ServiceWorkerStorage::NewRegistrationId() {
-  if (state_ == DISABLED)
+  if (state_ == STORAGE_STATE_DISABLED)
     return blink::mojom::kInvalidServiceWorkerRegistrationId;
-  DCHECK_EQ(INITIALIZED, state_);
+  DCHECK_EQ(STORAGE_STATE_INITIALIZED, state_);
   return next_registration_id_++;
 }
 
 int64_t ServiceWorkerStorage::NewVersionId() {
-  if (state_ == DISABLED)
+  if (state_ == STORAGE_STATE_DISABLED)
     return blink::mojom::kInvalidServiceWorkerVersionId;
-  DCHECK_EQ(INITIALIZED, state_);
+  DCHECK_EQ(STORAGE_STATE_INITIALIZED, state_);
   return next_version_id_++;
 }
 
 int64_t ServiceWorkerStorage::NewResourceId() {
-  if (state_ == DISABLED)
+  if (state_ == STORAGE_STATE_DISABLED)
     return kInvalidServiceWorkerResourceId;
-  DCHECK_EQ(INITIALIZED, state_);
+  DCHECK_EQ(STORAGE_STATE_INITIALIZED, state_);
   return next_resource_id_++;
 }
 
@@ -1063,7 +1081,7 @@ void ServiceWorkerStorage::NotifyDoneUninstallingRegistration(
 }
 
 void ServiceWorkerStorage::Disable() {
-  state_ = DISABLED;
+  state_ = STORAGE_STATE_DISABLED;
   if (disk_cache_)
     disk_cache_->Disable();
 }
@@ -1083,7 +1101,7 @@ ServiceWorkerStorage::ServiceWorkerStorage(
     : next_registration_id_(blink::mojom::kInvalidServiceWorkerRegistrationId),
       next_version_id_(blink::mojom::kInvalidServiceWorkerVersionId),
       next_resource_id_(kInvalidServiceWorkerResourceId),
-      state_(UNINITIALIZED),
+      state_(STORAGE_STATE_UNINITIALIZED),
       expecting_done_with_disk_on_disable_(false),
       user_data_directory_(user_data_directory),
       context_(context),
@@ -1114,7 +1132,8 @@ base::FilePath ServiceWorkerStorage::GetDiskCachePath() {
 }
 
 bool ServiceWorkerStorage::LazyInitializeForTest(base::OnceClosure callback) {
-  if (state_ == UNINITIALIZED || state_ == INITIALIZING) {
+  if (state_ == STORAGE_STATE_UNINITIALIZED ||
+      state_ == STORAGE_STATE_INITIALIZING) {
     LazyInitialize(std::move(callback));
     return false;
   }
@@ -1122,13 +1141,15 @@ bool ServiceWorkerStorage::LazyInitializeForTest(base::OnceClosure callback) {
 }
 
 void ServiceWorkerStorage::LazyInitialize(base::OnceClosure callback) {
-  DCHECK(state_ == UNINITIALIZED || state_ == INITIALIZING) << state_;
+  DCHECK(state_ == STORAGE_STATE_UNINITIALIZED ||
+         state_ == STORAGE_STATE_INITIALIZING)
+      << state_;
   pending_tasks_.push_back(std::move(callback));
-  if (state_ == INITIALIZING) {
+  if (state_ == STORAGE_STATE_INITIALIZING) {
     return;
   }
 
-  state_ = INITIALIZING;
+  state_ = STORAGE_STATE_INITIALIZING;
   database_task_runner_->PostTask(
       FROM_HERE,
       base::BindOnce(&ReadInitialDataFromDB, database_.get(),
@@ -1141,14 +1162,14 @@ void ServiceWorkerStorage::DidReadInitialData(
     std::unique_ptr<InitialData> data,
     ServiceWorkerDatabase::Status status) {
   DCHECK(data);
-  DCHECK_EQ(INITIALIZING, state_);
+  DCHECK_EQ(STORAGE_STATE_INITIALIZING, state_);
 
   if (status == ServiceWorkerDatabase::STATUS_OK) {
     next_registration_id_ = data->next_registration_id;
     next_version_id_ = data->next_version_id;
     next_resource_id_ = data->next_resource_id;
     registered_origins_.swap(data->origins);
-    state_ = INITIALIZED;
+    state_ = STORAGE_STATE_INITIALIZED;
     ServiceWorkerMetrics::RecordRegisteredOriginCount(
         registered_origins_.size());
   } else {
@@ -1627,7 +1648,9 @@ ServiceWorkerStorage::FindInstallingRegistrationForId(int64_t registration_id) {
 }
 
 ServiceWorkerDiskCache* ServiceWorkerStorage::disk_cache() {
-  DCHECK(INITIALIZED == state_ || DISABLED == state_) << state_;
+  DCHECK(STORAGE_STATE_INITIALIZED == state_ ||
+         STORAGE_STATE_DISABLED == state_)
+      << state_;
   if (disk_cache_)
     return disk_cache_.get();
   disk_cache_.reset(new ServiceWorkerDiskCache);
@@ -2080,7 +2103,7 @@ void ServiceWorkerStorage::DeleteAllDataForOriginsFromDB(
 }
 
 bool ServiceWorkerStorage::IsDisabled() const {
-  return state_ == DISABLED;
+  return state_ == STORAGE_STATE_DISABLED;
 }
 
 // TODO(nhiroki): The corruption recovery should not be scheduled if the error
@@ -2090,7 +2113,7 @@ bool ServiceWorkerStorage::IsDisabled() const {
 void ServiceWorkerStorage::ScheduleDeleteAndStartOver() {
   // TODO(dmurph): Notify the quota manager somehow that all of our data is now
   // removed.
-  if (state_ == DISABLED) {
+  if (state_ == STORAGE_STATE_DISABLED) {
     // Recovery process has already been scheduled.
     return;
   }
@@ -2103,7 +2126,7 @@ void ServiceWorkerStorage::ScheduleDeleteAndStartOver() {
 void ServiceWorkerStorage::DidDeleteDatabase(
     StatusCallback callback,
     ServiceWorkerDatabase::Status status) {
-  DCHECK_EQ(DISABLED, state_);
+  DCHECK_EQ(STORAGE_STATE_DISABLED, state_);
   if (status != ServiceWorkerDatabase::STATUS_OK) {
     // Give up the corruption recovery until the browser restarts.
     LOG(ERROR) << "Failed to delete the database: "
@@ -2134,7 +2157,7 @@ void ServiceWorkerStorage::DidDeleteDatabase(
 
 void ServiceWorkerStorage::DidDeleteDiskCache(StatusCallback callback,
                                               bool result) {
-  DCHECK_EQ(DISABLED, state_);
+  DCHECK_EQ(STORAGE_STATE_DISABLED, state_);
   if (!result) {
     // Give up the corruption recovery until the browser restarts.
     LOG(ERROR) << "Failed to delete the diskcache.";
